<resources>
    <string name="app_name">꽈배기</string>
    <string name="splash">로딩</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="login_with_others">다른 계정으로 로그인하기</string>
    <string name="login_with_kakao">카카오톡 로그인하기</string>
    <string name="login_with_facebook">페이스북 로그인하기</string>
    <string name="forgot_id_pw"><u>아이디나 비밀번호를 잊으셨나요?</u></string>
    <string name="select">설정하기</string>
    <string name="info_confirm">정보확인</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="terms">이용약관</string>
    <string name="private_info_agree">개인정보 수집동의</string>
    <string name="agree">동의하기</string>
    <string name="next">다음</string>
    <string name="private_info">개인정보설정</string>
    <string name="univ_info">학교정보설정</string>
    <string name="nickname">닉네임 :</string>
    <string name="sex">성별 :</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="all_agree">전체 동의하기</string>
    <string name="search_univ">학교 검색</string>
    <string name="search_univ_hint">대학명을 입력하세요</string>
    <string name="search_major">전공 검색</string>
    <string name="search_major_hint">전공을 입력하세요</string>
    <string name="duplicate">중복 확인</string>
    <string name="email">\@</string>
    <string name="conn_fail">네트워크 상태를 확인 후 다시 시도해주세요.</string>
    <string name="invalid_param">정확한 정보를 입력 후 다시 시도해주세요.</string>
    <string name="please_wait">잠시만 기다려주세요.</string>

    <string-array name="univ_list">
        <item > 동국대학교 </item>
        <item > 서울대학교 </item>
        <item > 부산대학교 </item>
        <item > 인천대학교 </item>
    </string-array>

    <string-array name="major_list">
        <item > 경영대학 </item>
        <item > 생명과학대학 </item>
        <item > 문과대학 </item>
        <item > 교육대학 </item>
    </string-array>
</resources>
