<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"

    >

    <RelativeLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center">

        <ImageButton
            android:background="@drawable/bar_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <com.depromeet.bread.view.DohyeonTextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/font_size_title"
            android:text="@string/private_info" />

    </RelativeLayout>

    <LinearLayout
        android:layout_weight="1"
        android:background="@color/colorGrayBackground"
        android:layout_margin="@dimen/activity_margin_small"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageButton
            android:scaleType="fitXY"
            android:src="@drawable/profile_pic"
            android:background="@color/colorTransparent"
            android:id="@+id/univBtn"
            android:layout_margin="@dimen/activity_margin_quadra"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="300dp" />

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:gravity="center"
                android:textSize="27sp"
                android:text="@string/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="100dp"
                android:layout_height="match_parent" />
            <TextView
                android:layout_marginLeft="@dimen/activity_margin_small"
                android:gravity="center_vertical"
                android:text="@string/duplicate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/activity_margin_small"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:gravity="center"
                android:textSize="27sp"
                android:text="@string/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <RadioButton
                    android:layout_marginLeft="@dimen/activity_margin_small"
                    android:textSize="27sp"
                    android:text="@string/male"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <RadioButton
                    android:layout_marginLeft="@dimen/activity_margin_small"
                    android:textSize="27sp"
                    android:text="@string/female"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </RadioGroup>

        </LinearLayout>


        <com.depromeet.bread.view.DohyeonButton
            android:layout_gravity="center_horizontal"
            android:stateListAnimator="@null"
            android:layout_margin="@dimen/activity_margin_ultra"
            android:layout_width="140dp"
            android:layout_height="@dimen/activity_view_height"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_size_large"
            android:text="@string/next" />

    </LinearLayout>



</LinearLayout>