<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center">

        <ImageButton
            android:background="@drawable/bar_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <com.depromeet.bread.view.DohyeonTextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/font_size_title"
            android:text="@string/terms" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:layout_marginLeft="@dimen/activity_margin_double"
                android:layout_marginTop="@dimen/activity_margin"
                android:textSize="@dimen/font_size_large"
                android:textColor="@color/colorPrimary"
                android:text="@string/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_gravity=""
                android:layout_marginLeft="@dimen/activity_margin_double"
                android:layout_marginTop="@dimen/activity_margin"
                android:textSize="@dimen/font_size_large"
                android:textColor="@color/colorPrimary"
                android:text="@string/agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ScrollView
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:layout_margin="@dimen/activity_margin_double"
            android:layout_width="match_parent"
            android:layout_height="100dp" />




        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <TextView
                android:layout_marginLeft="@dimen/activity_margin_double"
                android:textSize="@dimen/font_size_large"
                android:textColor="@color/colorPrimary"
                android:text="@string/private_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <ScrollView
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:layout_margin="@dimen/activity_margin_double"
            android:layout_width="match_parent"
            android:layout_height="100dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_marginLeft="@dimen/activity_margin_double"
                android:textSize="@dimen/font_size_large"
                android:textColor="@color/colorPrimary"
                android:text="@string/all_agree"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <com.depromeet.bread.view.DohyeonButton
            android:textSize="28sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/cancel"
            android:background="@color/colorAccent"
            android:layout_margin="@dimen/activity_margin"
            android:layout_width="180dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <com.depromeet.bread.view.DohyeonButton
            android:layout_weight="1"
            android:textSize="28sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/confirm"
            android:background="@color/colorAccent"
            android:layout_margin="@dimen/activity_margin"
            android:layout_width="180dp"
            android:layout_height="match_parent" />

    </LinearLayout>




</LinearLayout>
